--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,11 @@ h3 {
   text-align: center;
 }
 
+section.body {
+  width: 90%;
+  margin: 0 auto;
+}
+
 nav {
   margin-bottom: 10px;
 }
@@ -43,13 +48,13 @@ td.id {
 }
 
 td.company {
-  width: 120px;
+  width: 150px;
   text-align: center;
 }
 
 td.price {
-  width: 100px;
   text-align: right;
+  width: 100px;
 }
 
 footer {
