feat(css):產品卡片清單排版實作

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,8 @@ nav {
 ul {
   padding-left: 0;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
 
 ul > li {
@@ -90,4 +92,17 @@ td.price {
 
 footer {
   margin-top: 20px;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.card {
+  border: solid 1px #999;
+  padding: 10px;
+  border-radius: 8px;
+  flex-basis: 250px;
 }
